--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     }
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "cors": "^2.8.5",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
