--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "csv-load-sync": "^2.3.1",
     "dotenv": "^9.0.2",
     "express": "^4.17.1",
+    "firebase": "^9.6.4",
     "mysql2": "^2.3.3",
     "nodemon": "^2.0.15"
   },
